netty&synchronized